fixed portfolio page to show projects in alignment with design criteria

--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -3,26 +3,31 @@
 	background-size: cover;
 	height: 1000px;
 	display: grid;
-	grid-template-rows: 1fr 1fr 1fr;
-	grid-template-areas: 'one two three';
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-areas: 'one one one' 'two two two' 'three three three';
 	color: white;
 }
 
 .project-1 {
 	grid-area: one;
+	padding: 50px;
 }
 
 .project-2 {
 	grid-area: two;
+	padding: 50px;
 }
 
 .project-3 {
 	grid-area: three;
+	padding: 50px;
 }
 
 .portfolio h3 {
 	padding: 10px;
 	margin: auto;
+	text-align: center;
+	font-size: 16px;
 }
 
 .portfolio p {
@@ -30,7 +35,8 @@
 }
 
 img {
-	width: 80%;
+	width: 60%;
+	float: right;
 }
 
 .portfolio a {
